# CS480-Assignment-4

./: CMakeLists.txt  CMakePresets.json  imgui.ini  vcpkg.json
assets/shaders/: a4_pipeline.frag  a4_pipeline.vert  fullscreen.vert
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: Color.h  Font5x7.h  Image.cpp  Image.h  Srgb.cpp  Srgb.h  Text5x7.cpp  Text5x7.h
src/gl/: GlUtils.cpp  GlUtils.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/math/: Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h
src/ops/: BlendModes.cpp  BlendModes.h  Brightness.cpp  Brightness.h  Composite.cpp  Composite.h
src/pipeline/: Assignment4Renderer.cpp  Assignment4Renderer.h
